<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/desc_img_smile"
            android:src="@drawable/pic_smile" />

        <TextView
            android:id="@+id/textsBayrHurgii"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/tv_text_voila"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textsNiitdarsan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/tv_text_your_score"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDarsan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="90sp" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="198dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_nextmission_eng"
            android:contentDescription="@string/desc_shape_img" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>