<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="178dp"
            android:layout_above="@+id/llcenter"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_launcher_eng"
            android:contentDescription="@string/desc_main_menu_img" />

        <LinearLayout
            android:id="@+id/llcenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/button_play"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/play_xml"
                android:contentDescription="@string/desc_button_play" />


            <ImageButton
                android:id="@+id/button_intro"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/intro_xml"
                android:contentDescription="@string/desc_button_how_to" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>